docs/v1/github.com/solo-io/gloo/projects/gloo/api/v1/plugins/transformation/transformation.proto.sk.md

---
title: "transformation.proto.sk.md"
weight: 5
---

<!-- Code generated by solo-kit. DO NOT EDIT. -->


### Package: `transformation.plugins.gloo.solo.io`  
TODO: this was copied form the transformation filter.
TODO: instead of manually copying, we want to do it via script, similar to the java-control-plane
TODO: to solo-kit/api/envoy


 
##### Types:


- [RouteTransformations](#RouteTransformations)
- [Transformation](#Transformation)
- [Extraction](#Extraction)
- [TransformationTemplate](#TransformationTemplate)
- [InjaTemplate](#InjaTemplate)
- [Passthrough](#Passthrough)
- [MergeExtractorsToBody](#MergeExtractorsToBody)
- [HeaderBodyTransform](#HeaderBodyTransform)
  



##### Source File: [github.com/solo-io/gloo/projects/gloo/api/v1/plugins/transformation/transformation.proto](https://github.com/solo-io/gloo/blob/master/projects/gloo/api/v1/plugins/transformation/transformation.proto)





---
### <a name="RouteTransformations">RouteTransformations</a>



```yaml
"request_transformation": .transformation.plugins.gloo.solo.io.Transformation
"response_transformation": .transformation.plugins.gloo.solo.io.Transformation

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 
| `request_transformation` | [.transformation.plugins.gloo.solo.io.Transformation](../transformation.proto.sk#Transformation) |  |  |
| `response_transformation` | [.transformation.plugins.gloo.solo.io.Transformation](../transformation.proto.sk#Transformation) |  |  |




---
### <a name="Transformation">Transformation</a>

 
[#proto-status: experimental]

```yaml
"transformation_template": .transformation.plugins.gloo.solo.io.TransformationTemplate
"header_body_transform": .transformation.plugins.gloo.solo.io.HeaderBodyTransform

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 
| `transformation_template` | [.transformation.plugins.gloo.solo.io.TransformationTemplate](../transformation.proto.sk#TransformationTemplate) |  |  |
| `header_body_transform` | [.transformation.plugins.gloo.solo.io.HeaderBodyTransform](../transformation.proto.sk#HeaderBodyTransform) |  |  |




---
### <a name="Extraction">Extraction</a>



```yaml
"header": string
"regex": string
"subgroup": int

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 
| `header` | `string` |  |  |
| `regex` | `string` | what information to extract. if extraction fails the result is an empty value. |  |
| `subgroup` | `int` |  |  |




---
### <a name="TransformationTemplate">TransformationTemplate</a>



```yaml
"advanced_templates": bool
"extractors": map<string, .transformation.plugins.gloo.solo.io.Extraction>
"headers": map<string, string>
"body": .transformation.plugins.gloo.solo.io.InjaTemplate
"passthrough": .transformation.plugins.gloo.solo.io.Passthrough
"merge_extractors_to_body": .transformation.plugins.gloo.solo.io.MergeExtractorsToBody

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 
| `advanced_templates` | `bool` |  |  |
| `extractors` | `map<string, .transformation.plugins.gloo.solo.io.Extraction>` | Extractors are in the origin request language domain |  |
| `headers` | `map<string, string>` |  |  |
| `body` | [.transformation.plugins.gloo.solo.io.InjaTemplate](../transformation.proto.sk#InjaTemplate) |  |  |
| `passthrough` | [.transformation.plugins.gloo.solo.io.Passthrough](../transformation.proto.sk#Passthrough) |  |  |
| `merge_extractors_to_body` | [.transformation.plugins.gloo.solo.io.MergeExtractorsToBody](../transformation.proto.sk#MergeExtractorsToBody) |  |  |




---
### <a name="InjaTemplate">InjaTemplate</a>

 
custom functions:
header_value(name) -> from the original headers
extracted_value(name, index) -> from the extracted values

```yaml
"text": string

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 
| `text` | `string` |  |  |




---
### <a name="Passthrough">Passthrough</a>



```yaml

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 




---
### <a name="MergeExtractorsToBody">MergeExtractorsToBody</a>



```yaml

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 




---
### <a name="HeaderBodyTransform">HeaderBodyTransform</a>



```yaml

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 





<!-- Start of HubSpot Embed Code -->
<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5130874.js"></script>
<!-- End of HubSpot Embed Code -->
